1.修改同乐达 T62 (AB281A)为天之蓝UI 2.在AB281A项目上增加光束方块表盘，宏定义：UTE_WATCHS_LIGHT_CUBE_DIAL_SUPPORT

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1121,6 +1121,9 @@
 		<Unit filename="functions/func_clock_cube.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_clock_light_cube.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_clock_preview.c">
 			<Option compilerVar="CC" />
 		</Unit>
