--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1258,6 +1258,12 @@
 		<Unit filename="functions/func_modem_ring.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_mood.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_mood_about.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_music.c">
 			<Option compilerVar="CC" />
 		</Unit>
