添加新需求、加大界面栈内存空间、修复测试bug、更换ic固件

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1264,6 +1264,9 @@
 		<Unit filename="functions/func_mood_about.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_motor_grade.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_music.c">
 			<Option compilerVar="CC" />
 		</Unit>
