--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1306,6 +1306,9 @@
 		<Unit filename="functions/func_password_sub_select.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_power_off.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_power_on.c">
 			<Option compilerVar="CC" />
 		</Unit>
