1.修改输出电压2.灭屏状态拔插不亮屏3.老化模式等最近修改

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1249,6 +1249,9 @@
 		<Unit filename="functions/func_ecig_reminder.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_ecig_reminderclock.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_ecig_set_power.c">
 			<Option compilerVar="CC" />
 		</Unit>
