--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -98,6 +98,7 @@
 			<Add directory="../../../ute/module/bedsideMode" />
 			<Add directory="../../platform/gui/ctp/spt5113c" />
 			<Add directory="../../platform/gui/ctp/spt5113c/firmware" />
+			<Add directory="../../../ute/drv/led" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -155,6 +156,10 @@
 		<Unit filename="../../../ute/drv/gsensor/ute_drv_gsensor_stk8321.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../../ute/drv/led/ute_drv_led.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/drv/led/ute_drv_led.h" />
 		<Unit filename="../../../ute/drv/motor/ute_drv_motor.c">
 			<Option compilerVar="CC" />
 		</Unit>
