--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -98,6 +98,7 @@
 			<Add directory="../../../ute/module/bedsideMode" />
 			<Add directory="../../platform/gui/ctp/spt5113c" />
 			<Add directory="../../platform/gui/ctp/spt5113c/firmware" />
+			<Add directory="../../../ute/module/keysetfunc" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -247,6 +248,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/heart/ute_module_heart.h" />
+		<Unit filename="../../../ute/module/keysetfunc/ute_module_keysetfunc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/keysetfunc/ute_module_keysetfunc.h" />
 		<Unit filename="../../../ute/module/liftwrist/ute_module_liftwrist.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -1225,6 +1230,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/func_heartrate.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_key_set_function.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/func_light.c">
