--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -755,6 +755,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../platform/bsp/bsp_vbat.h" />
+		<Unit filename="../../platform/bsp/bsp_vddhr_trim.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_vddhr_trim.h" />
 		<Unit filename="../../platform/gui/components/compo_animation.c">
 			<Option compilerVar="CC" />
 		</Unit>
