1、添加最近任务获取资源接口 2、修改两个新菜单获取资源逻辑、添加创建、刷新到主菜单中 3、HX01更换音频文件 4、G28Z取消部分厂测模式

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1276,6 +1276,12 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/func_menu.h" />
+		<Unit filename="functions/func_menu_sub_cum_ring1.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_menu_sub_cum_ring2.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_menu_sub_cum_sudoku.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -1315,6 +1321,10 @@
 		<Unit filename="functions/func_menu_sub_waterfall.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_menu_ui_data.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_menu_ui_data.h" />
 		<Unit filename="functions/func_menustyle.c">
 			<Option compilerVar="CC" />
 		</Unit>
