同乐达T75定制项目AB281AGV000156 基于T75中性修改蓝牙名、开关机logo、app使用gloryfit

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -365,6 +365,7 @@
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281ab.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281ac.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281ae.h" />
+		<Unit filename="../../../ute/project_config/ute_project_config_ab281ag.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281b.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281c.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281d.h" />
